@@ -1,4 +1,5 @@
 2009-0x-0x Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
+	* add signal to notify caller when initialization is done
 	* add cache timeout option to reduce long-term memory usage
 
 2009-05-06 Nan Dun  <dunnan@yl.is.s.u-tokyo.ac.jp>
